- Added config values to load the production or development mode. - Added Test-scene as first scene mode to config

--- a/src/rsc/config.json
+++ b/src/rsc/config.json
@@ -1,1 +1,1 @@
-{"Settings": {"APP_SPEED": 1, "LED_PIXEL_SCALE": 30, "ESP_BAUD": 9600, "WALL_SIZE_X": 6, "WALL_SIZE_Y": 6}}
+{"Settings": {"APP_SPEED": 1, "LED_PIXEL_SCALE": 30, "ESP_BAUD": 9600, "WALL_SIZE_X": 6, "WALL_SIZE_Y": 6, "IS_DEVELOPMENT_ENVIRONMENT": true, "USE_TEST_SCENE": true}}
