--- a/src/rsc/config.json
+++ b/src/rsc/config.json
@@ -1,1 +1,1 @@
-{"Settings": {"APP_SPEED": 1, "LED_PIXEL_SCALE": 35, "ESP_BAUD": 9600, "WALL_SIZE_X": 3, "WALL_SIZE_Y": 6, "IS_DEVELOPMENT_ENVIRONMENT": true, "USE_TEST_SCENE": false}}
+{"Settings": {"LED_PIXEL_SCALE": 35, "ESP_BAUD": 9600, "WALL_SIZE_X": 3, "WALL_SIZE_Y": 6, "IS_DEVELOPMENT_ENVIRONMENT": true, "USE_TEST_SCENE": false, "TETRIS_SPEED": 0.2, "SNAKE_SPEED": 0.15, "PONG_SPEED": 0.1}}
