--- a/src/rsc/config.json
+++ b/src/rsc/config.json
@@ -1,1 +1,1 @@
-{"Settings": {"LED_PIXEL_SCALE": 35, "ESP_BAUD": 9600, "WALL_SIZE_X": 5, "WALL_SIZE_Y": 5, "IS_DEVELOPMENT_ENVIRONMENT": true, "USE_TEST_SCENE": false, "TETRIS_SPEED": 0.2, "SNAKE_SPEED": 0.15, "PONG_SPEED": 0.1, "USE_OLD_WS2812B_CONNECTION_TYPE": false}}
+{"Settings": {"LED_PIXEL_SCALE": 35, "ESP_BAUD": 9600, "WALL_SIZE_X": 5, "WALL_SIZE_Y": 5, "IS_DEVELOPMENT_ENVIRONMENT": true, "USE_TEST_SCENE": false, "TETRIS_SPEED": 0.20000000298023224, "SNAKE_SPEED": 0.158, "PONG_SPEED": 0.10000000149011612, "USE_OLD_WS2812B_CONNECTION_TYPE": false}}
